--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 <head>
-	<title></title>
+	<title>Video background landing page</title>
 </head>
 <body>
+	<section class="show-case">
+		<div class="video-container">
+			<video src="movie.mp4" autoplay muted loop></video>
+		</div>
+		
+		<div class="content">
+			<h1>Shoot for the waves</h1>
+			<h4>Full screen video landing page</h4>
+			<a href="#about" class="btn">Read More</a>
+		</div>
+	</section>
+
+	<section id="about">
+		<h1>About</h1>
+		<p>
+			This is my landing page with full screen video background.
+			i can use it in my
+				projets when necessary
+				keep changing content and code
+		</p>
+		<h2>follow me on social media</h2>
+
+		<div class="social">
+			<a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+			<a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+			<a href="#"><i class="fab fa-github fa-3x"></i></a>	
+			</div>
+	</section>
 
 </body>
 </html>
